force-app/main/default/objects/Email_Details__c/Email_Details__c.object-meta.xml
<CustomObject>
    <label>Case Email Notification</label>
    <nameField>
        <displayFormat>Email - {0000}</displayFormat>
        <label>Email Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Email Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>