force-app/main/default/objects/Email_Details__c/fields/Closure_Mail_Flag__c.field-meta.xml
<CustomField>
    <fullName>Closure_Mail_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for mentioning whether Case Closure email has sent or not.</description>
    <label>Case Closure Email Sent</label>
    <type>Checkbox</type>
</CustomField>