force-app/main/default/objects/Email_Details__c/fields/Creation_Mail_Flag__c.field-meta.xml
<CustomField>
    <fullName>Creation_Mail_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for mentioning whether Case Creation email has sent or not.</description>
    <label>Case Creation Email Sent</label>
    <type>Checkbox</type>
</CustomField>