force-app/main/default/objects/Email_Details__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <description>Master-Detail relationship for the holding Case object.</description>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Email Notifications</relationshipLabel>
    <relationshipName>Email_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>