force-app/main/default/objects/Email_Details__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to hold whether user has to be notified with the Email or not.</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>