force-app/main/default/objects/Email_Details__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>Text field used for saving the user&#39;s email id.</description>
    <label>User Email</label>
    <type>Email</type>
</CustomField>