force-app/main/default/objects/Email_Details__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Text field for storing user name.</description>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>